@@ -1,3 +1,7 @@
+Thu Sep 16 16:32:02 EDT 2010	JK Lowden <jklowden@freetds.org>
+	* doc/bsqldb.txt src/apps/bsqldb.c
+	- add -H hostname to override hostname sent to server
+
 Thu Sep 16 14:30:15 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/dblib/dblib.c:
 	- update inline documentation for dbiscount (patch from LacaK)
@@ -2896,4 +2900,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.3128 2010/09/16 12:30:43 freddy77 Exp $
+$Id: ChangeLog,v 1.3129 2010/09/16 20:33:28 jklowden Exp $
